# sisprev

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  site.yml
data/: regras-sisprev.csv
data/raw/: regras-sisprev.csv  regras-sisprev.xlsx
data/raw/xlsx/: compulsoria.csv  especial-de-policial.csv  especial-de-professor.csv  invalidezincapacidade-permanent.csv  pcd.csv  pensao.csv  quadro-analitico.csv  regras-no-sisprev.csv  regras-processo-sei.csv  voluntaria-por-idadecontribuica.csv
docs/analysis/: base-normativa-invalidez-incapacidade.md  ciclo-1-findings.md  estado-da-auditoria.md  piloto-nomes-invalidez-incapacidade.md  piloto-selecao-invalidez-incapacidade.md  q6-causa-incapacidade.md  reconciliacao-invalidez-incapacidade.md  reconciliacao-invalidez.md  reconciliacao-policial.md
docs/rfc/: 0001-criterios-de-validacao-das-regras.md  0002-selecao-explicavel-pos-anamnese.md  0003-site-estatico-de-publicacao.md  0004-schema-enriquecido-e-compilador-para-o-sisprev.md  0005-simulacao-markov-stress-test-regras.md
docs/spec/: regra.md
okf/dispositivos/: index.md
okf/dispositivos/cf88/: art-40-caput-original.md  art-40-i-original.md  art-40-ii-original.md  art-40-iii-a-original.md  art-40-iii-b-original.md  art-40-iii-c-original.md  art-40-iii-d-original.md  art-40-p1-caput-ec103-2019.md  art-40-p1-i-ec103-2019.md  art-40-p1-i-ec20-1998.md  art-40-p1-i-ec41-2003.md  art-40-p1-ii-ec88-2015.md  art-40-p1-iii-ec103-2019.md  art-40-p4a-ec103-2019.md  art-40-p4b-ec103-2019.md  art-40-p4c-ec103-2019.md  art-40-p5-ec103-2019.md  art-40-p7-caput-ec41-2003.md  art-40-p7-ec103-2019.md  art-40-p7-i-ec41-2003.md  art-40-p7-ii-ec41-2003.md  index.md
okf/dispositivos/ec-20-1998/: art-8.md  index.md
okf/dispositivos/ec-41-2003/: art-2.md  art-6.md  art-6a-ec70-2012.md  index.md
okf/dispositivos/ec-47-2005/: art-3-unico.md  art-3.md  index.md
okf/dispositivos/ece-146-2021/: art-4.md  index.md
okf/dispositivos/lc-152-2015/: art-2.md  index.md
okf/dispositivos/lc-51-1985/: art-1-ii-a.md  art-1-ii-b.md  art-1-ii.md  art-1.md  index.md
okf/dispositivos/lce-1100-2021/: art-24.md  art-25.md  art-26.md  art-27-i.md  art-27-ii.md  art-30-caput.md  art-30-p1.md  art-30-p2.md  art-30-p5.md  art-30-p6.md  art-30-p8.md  index.md
okf/dispositivos/lce-432-2008/: art-17.md  art-20-caput.md  art-20-p1.md  art-20-p14.md  art-20-p2.md  art-20-p6.md  art-20-p7.md  art-20-p9.md  art-45.md  art-62.md  index.md
okf/dispositivos/lei-10887-2004/: art-1.md  index.md
okf/regras-auditadas/: index.md  manifesto-substituicao.yaml
okf/regras-auditadas/unidades/: index.md
okf/regras-sisprev/: index.md  regras-sisprev.md
okf/regras-sisprev/achados/: achado-0001.md  achado-0002.md  achado-0003.md  achado-0004.md  achado-0005.md  achado-0006.md  achado-0007.md  achado-0008.md  achado-0009.md  achado-0010.md  index.md
okf/regras-sisprev/regras/: index.md  log.md  regra-0001.md  regra-0002.md  regra-0003.md  regra-0004.md  regra-0005.md  regra-0006.md  regra-0007.md  regra-0008.md  regra-0009.md  regra-0010.md  regra-0011.md  regra-0012.md  regra-0013.md  regra-0014.md  regra-0015.md  regra-0016.md  regra-0017.md  regra-0018.md  regra-0019.md  regra-0020.md  regra-0021.md  regra-0022.md  regra-0023.md  regra-0024.md  regra-0025.md  regra-0026.md  regra-0027.md  regra-0028.md  regra-0029.md  regra-0030.md  regra-0031.md  regra-0032.md  regra-0033.md  regra-0034.md  regra-0035.md  regra-0036.md  regra-0037.md  regra-0038.md  (+74 more)
scripts/: __init__.py  achado_schema.py  bundle.py  catalogo_auditado_gate.py  compilador_auditado.py  concept.py  csv_to_okf.py  detections.py  dispositivo_schema.py  emit_site_data.py  estado_auditoria.py  gerar_indices.py  manifesto_substituicao.py  md_format.py  okf_common.py  okf_to_csv.py  papeis_projecao.py  regra_schema.py  regras_log.py  unidade_auditada_schema.py  validar_regras.py  xlsx_to_csv.py
scripts/detectors/: __init__.py  co_ocorrencias.py  igualdade_material.py  nome_repetido.py
site/: astro.config.mjs  package-lock.json  package.json  vitest.config.ts
site/scripts/: emit-data.sh
site/src/: consts.ts  content.config.ts
site/src/components/: AuditBanner.astro  EntityCard.astro  MetadataGrid.astro  RelationList.astro  SnapshotInfo.astro  StatusBadge.astro
site/src/lib/: simulador.ts  (+7 more)
tests/: __init__.py  test_achado_schema.py  test_achados_bundle.py  test_bundle_dispositivos.py  test_bundle_integrity.py  test_bundle_sync.py  test_catalogo_auditado_gate.py  test_compilador_auditado.py  test_concept.py  test_covering_tests.py  test_detector_camada_3.py  test_detector_igualdade_material.py  test_detector_properties.py  test_dispositivo_schema.py  test_emit_site_data.py  test_estado_auditoria.py  test_gerar_indices.py  test_malformed_docs.py  test_manifesto_substituicao.py  test_md_format.py  test_regra.py  test_regra_schema.py  test_regras_log.py  test_requisitos_verificacao_humana.py  test_roundtrip.py  test_unidade_auditada_schema.py  test_validar_regras.py  test_validar_regras_json.py  vulture_whitelist.py
(+10 files in other folders)
