[project]
name = "sisprev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with the formatter
    "ISC001", # conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # assert is how pytest asserts
# S603: subprocess.run with a fixed git argv (resolved to an absolute path
# via shutil.which — S607 already enforces that) and a path already
# validated to be inside REPO_ROOT, not untrusted input.
"scripts/regras_log.py" = ["S603"]
# Same S603 shape as scripts/regras_log.py, but building a throwaway git
# repo under tmp_path for tests/test_regras_log.py.
"tests/test_regras_log.py" = ["S603"]

[tool.ruff.lint.pydocstyle]
convention = "google"
