[project]
name = "sisprev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with the formatter
    "ISC001", # conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # assert is how pytest asserts

[tool.ruff.lint.pydocstyle]
convention = "google"
